docs(jdk-only): reconcile W5-1, W6-6, W6-2, W2-1, W2-2, W2-3
Four headlines verified green in both modes on the ba65f1a19 binary
(RJdkJni 35, RJdkModule 44, plus W6-6 sharing RJdkJni).

W2-1's two named residuals are BOTH closed and one of its diagnoses was wrong:
ArrayDeque.stream().count() was the missing spare ring-buffer slot, not the
unwritten tail. Its listIterator refusal was reversed by 6ae3ca634.

W2-3's out-of-file patch is genuinely unapplied in all four parts, so its
isAutomatic() check still passes VACUOUSLY at 44/44 -- the green does not
close it.

W2-2: all three named surfaces fixed; a plausible FOURTH surface of the same
species recorded as a finding at phases_early.rs:18236.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>